--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,30 @@
 # main links links
 main:
+
+  - title: "About Me"
+    url: /about-me/
+  
+  - title: "Projects"
+    url: /projects/
+
+  # - title: "Educations"
+  #   url: /educations/
+
+  # - title: "Honours and Awards"
+  #   url: /honours-and-awards/
+
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Internships"
+    url: /internships/
 
-  - title: "Teaching"
-    url: /teaching/    
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Download CV"
+    url: http://xiaorandyu.github.io/files/CV_XiaoranYu.pdf
+
     
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
